# minikernel

./: .gitignore  CMakeLists.txt  Makefile  README  anteriorCMakeLists.txt  anteriorMakefile
include/: miniKernel.h  queue.h  types.h
src/: main.c  miniKernel.c  queue.c
